[package]
edition = "2021"
name = "embassy-avr-as5600-encoder"
version = "0.1.0"
authors = ["brainstorm <brainstorm@nopcode.org>"]
resolver = "2"

[dependencies]
panic-halt = "0.2"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-avr", "executor-thread", "nightly"] }
avr-device = { version = "0.5", features = ["atmega2560", "rt", "critical-section-impl"] }
avr-tester = "0.2"
arduino-hal = { git = "https://github.com/Rahix/avr-hal", features = ["arduino-mega2560"] }
as5600 = { version = "0.8", features = ["async"] }
ufmt = "0.2"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s" # mandatory, otherwise we'll get:  "error: ran out of registers during register allocation"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
