[package]
edition = "2021"
name = "embassy-avr-as5600-encoder"
version = "0.1.0"
authors = ["brainstorm <brainstorm@nopcode.org>"]
resolver = "2"

[dependencies]
embassy-executor = { version = "0", features = ["task-arena-size-8192"] }
esp-backtrace = { version = "0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0", git = "https://github.com/esp-rs/esp-hal", features = [ "esp32s3", "embassy", "embassy-time-timg0", "embassy-executor-thread", "async", "embedded-io-async" ] }
esp-println = { version = "0", features = ["esp32s3"] }
embedded-io-async = "0"
as5600 = { version = "0", features = ["async"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
